Angular material and theme

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div class="application__header _head-color">
+  <span>HEADER</span>
+</div>
+<div class="application__body">
+  <router-outlet></router-outlet>
+</div>
