--- a/front/src/app/components/weather-view/weather-view.component.html
+++ b/front/src/app/components/weather-view/weather-view.component.html
@@ -1,4 +1,13 @@
-<p>
-  weather-view works! hui
-</p>
-<router-outlet></router-outlet>
+<mat-tab-group>
+  <mat-tab label="Table">
+    <ng-template matTabContent>
+      Table
+    </ng-template>
+  </mat-tab>
+  <mat-tab label="Graphs">
+    <ng-template matTabContent>
+      Graphs
+    </ng-template>
+  </mat-tab>
+  <span>aaaaaaaaaaaaa</span>
+</mat-tab-group>
