--- a/front/src/app/components/weather-view/weather-view.component.html
+++ b/front/src/app/components/weather-view/weather-view.component.html
@@ -1,13 +1,12 @@
-<mat-tab-group>
+<mat-tab-group [animationDuration] = "0">
   <mat-tab label="Table">
     <ng-template matTabContent>
-      Table
+      <app-table-view></app-table-view>
     </ng-template>
   </mat-tab>
   <mat-tab label="Graphs">
     <ng-template matTabContent>
-      Graphs
+      <app-graph-view></app-graph-view>
     </ng-template>
   </mat-tab>
-  <span>aaaaaaaaaaaaa</span>
 </mat-tab-group>
