--- a/front/src/app/components/weather-view/graph-view/graph-view.component.html
+++ b/front/src/app/components/weather-view/graph-view/graph-view.component.html
@@ -1,14 +1,25 @@
-<div class="graph__header">
-  <mat-form-field>
-    <mat-select placeholder="Duration" (selectionChange)="onSelectionChange($event)">
-      <mat-option *ngFor="let duration of durations" [value]="duration">
-        {{duration.name}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
-  <p>Day Average: <span>{{averageMeasurement$ | async}}</span></p>
-  <p>Last Measurement: <span>{{lastMeasurement$ | async}}</span></p>
-</div>
-<div class="graph__body">
-  <div id="chartdiv" style="width: 100%; height: 500px"></div>
+<div class="graphs">
+  <div class="graphs__header">
+    <mat-form-field>
+      <mat-select placeholder="Duration" (selectionChange)="onSelectionChange($event)">
+        <mat-option *ngFor="let duration of durations" [value]="duration">
+          {{duration.name}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <p>Day Average:
+      <span>{{(averageMeasurement$ | async)?.temperature}}°C {{(averageMeasurement$ | async)?.humility}}%</span>
+    </p>
+    <p>Last Measurement:
+      <span>{{(lastMeasurement$ | async)?.temperature}}°C  {{(lastMeasurement$ | async)?.humility}}%</span>
+    </p>
+  </div>
+  <div class="graphs__body">
+    <div class="graph-wrapper temperature-graph">
+      <div id="chart-temperature-div" style="width: 100%; height: 500px"></div>
+    </div>
+    <div class="graph-wrapper humility-graph">
+      <div id="chart-humility-div" style="width: 100%; height: 500px"></div>
+    </div>
+  </div>
 </div>
