--- a/front/src/app/components/weather-view/table-view/table-view.component.html
+++ b/front/src/app/components/weather-view/table-view/table-view.component.html
@@ -6,8 +6,12 @@
       </mat-option>
     </mat-select>
   </mat-form-field>
-  <p>Day Average: <span>{{averageMeasurement$ | async}}</span></p>
-  <p>Last Measurement: <span>{{lastMeasurement$ | async}}</span></p>
+  <p>Day Average:
+    <span>{{(averageMeasurement$ | async)?.temperature}}°C {{(averageMeasurement$ | async)?.humility}}%</span>
+  </p>
+  <p>Last Measurement:
+    <span>{{(lastMeasurement$ | async)?.temperature}}°C  {{(lastMeasurement$ | async)?.humility}}%</span>
+  </p>
 </div>
 <div class="table__body">
   <table mat-table [dataSource]="measurements$ | async">
@@ -19,9 +23,9 @@
       <th mat-header-cell *matHeaderCellDef> Temperature</th>
       <td mat-cell *matCellDef="let measurement"> {{measurement.temperature}}</td>
     </ng-container>
-    <ng-container matColumnDef="pressure">
-      <th mat-header-cell *matHeaderCellDef> Pressure</th>
-      <td mat-cell *matCellDef="let measurement"> {{measurement.pressure}}</td>
+    <ng-container matColumnDef="humility">
+      <th mat-header-cell *matHeaderCellDef> Humility</th>
+      <td mat-cell *matCellDef="let measurement"> {{measurement.humility}}</td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
