All functionality is working. But don't look good.

--- a/front/src/app/components/weather-view/table-view/table-view.component.html
+++ b/front/src/app/components/weather-view/table-view/table-view.component.html
@@ -1,16 +1,16 @@
 <div class="table__header">
   <mat-form-field>
-    <mat-select placeholder="duration" (selectionChange)="onSelectionChange($event)">
+    <mat-select placeholder="duration" (selectionChange)="onSelectionChange($event)" [value]="duration$ | async">
       <mat-option *ngFor="let duration of durations" [value]="duration">
         {{duration.name}}
       </mat-option>
     </mat-select>
   </mat-form-field>
   <p>Day Average:
-    <span>{{(averageMeasurement$ | async)?.temperature}}°C {{(averageMeasurement$ | async)?.humility}}%</span>
+    <span>{{(averageMeasurement$ | async)?.temperature}}°C {{(averageMeasurement$ | async)?.humidity}}%</span>
   </p>
   <p>Last Measurement:
-    <span>{{(lastMeasurement$ | async)?.temperature}}°C  {{(lastMeasurement$ | async)?.humility}}%</span>
+    <span>{{(lastMeasurement$ | async)?.temperature}}°C  {{(lastMeasurement$ | async)?.humidity}}%</span>
   </p>
 </div>
 <div class="table__body">
@@ -23,9 +23,9 @@
       <th mat-header-cell *matHeaderCellDef> Temperature</th>
       <td mat-cell *matCellDef="let measurement"> {{measurement.temperature}}</td>
     </ng-container>
-    <ng-container matColumnDef="humility">
-      <th mat-header-cell *matHeaderCellDef> Humility</th>
-      <td mat-cell *matCellDef="let measurement"> {{measurement.humility}}</td>
+    <ng-container matColumnDef="humidity">
+      <th mat-header-cell *matHeaderCellDef> Humidity</th>
+      <td mat-cell *matCellDef="let measurement"> {{measurement.humidity}}</td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
