--- a/front/src/app/components/weather-view/graph-view/graph-view.component.html
+++ b/front/src/app/components/weather-view/graph-view/graph-view.component.html
@@ -1,25 +1,25 @@
 <div class="graphs">
   <div class="graphs__header">
     <mat-form-field>
-      <mat-select placeholder="Duration" (selectionChange)="onSelectionChange($event)">
+      <mat-select placeholder="Duration" (selectionChange)="onSelectionChange($event)" [value]="duration$ | async">
         <mat-option *ngFor="let duration of durations" [value]="duration">
           {{duration.name}}
         </mat-option>
       </mat-select>
     </mat-form-field>
     <p>Day Average:
-      <span>{{(averageMeasurement$ | async)?.temperature}}°C {{(averageMeasurement$ | async)?.humility}}%</span>
+      <span>{{(averageMeasurement$ | async)?.temperature}}°C {{(averageMeasurement$ | async)?.humidity}}%</span>
     </p>
     <p>Last Measurement:
-      <span>{{(lastMeasurement$ | async)?.temperature}}°C  {{(lastMeasurement$ | async)?.humility}}%</span>
+      <span>{{(lastMeasurement$ | async)?.temperature}}°C  {{(lastMeasurement$ | async)?.humidity}}%</span>
     </p>
   </div>
-  <div class="graphs__body">
+  <div class="graphs__body mat-app-background">
     <div class="graph-wrapper temperature-graph">
       <div id="chart-temperature-div" style="width: 100%; height: 500px"></div>
     </div>
-    <div class="graph-wrapper humility-graph">
-      <div id="chart-humility-div" style="width: 100%; height: 500px"></div>
+    <div class="graph-wrapper humidity-graph">
+      <div id="chart-humidity-div" style="width: 100%; height: 500px"></div>
     </div>
   </div>
 </div>
