Add little design

--- a/front/src/app/components/weather-view/graph-view/graph-view.component.html
+++ b/front/src/app/components/weather-view/graph-view/graph-view.component.html
@@ -1,18 +1,20 @@
 <div class="graphs">
   <div class="graphs__header">
     <mat-form-field>
-      <mat-select placeholder="Duration" (selectionChange)="onSelectionChange($event)" [value]="duration$ | async">
+      <mat-select placeholder="Duration:" (selectionChange)="onSelectionChange($event)" [value]="duration$ | async">
         <mat-option *ngFor="let duration of durations" [value]="duration">
           {{duration.name}}
         </mat-option>
       </mat-select>
     </mat-form-field>
-    <p>Day Average:
-      <span>{{(averageMeasurement$ | async)?.temperature}}°C {{(averageMeasurement$ | async)?.humidity}}%</span>
+    <div class="average-current-wrapper">
+    <p class="mat-h2 mat-title">Day Average:
+      <span class="mat-h2 mat-title">{{(averageMeasurement$ | async)?.temperature}}°C {{(averageMeasurement$ | async)?.humidity}}%</span>
     </p>
-    <p>Last Measurement:
-      <span>{{(lastMeasurement$ | async)?.temperature}}°C  {{(lastMeasurement$ | async)?.humidity}}%</span>
+    <p class="mat-h2 mat-title">Last Measurement:
+      <span class="mat-h2 mat-title">{{(lastMeasurement$ | async)?.temperature}}°C  {{(lastMeasurement$ | async)?.humidity}}%</span>
     </p>
+    </div>
   </div>
   <div class="graphs__body mat-app-background">
     <div class="graph-wrapper temperature-graph">
