--- a/front/src/app/components/weather-view/table-view/table-view.component.html
+++ b/front/src/app/components/weather-view/table-view/table-view.component.html
@@ -1,30 +1,32 @@
 <div class="table__header">
   <mat-form-field>
-    <mat-select placeholder="duration" (selectionChange)="onSelectionChange($event)" [value]="duration$ | async">
+    <mat-select placeholder="Duration:" (selectionChange)="onSelectionChange($event)" [value]="duration$ | async">
       <mat-option *ngFor="let duration of durations" [value]="duration">
         {{duration.name}}
       </mat-option>
     </mat-select>
   </mat-form-field>
-  <p>Day Average:
-    <span>{{(averageMeasurement$ | async)?.temperature}}°C {{(averageMeasurement$ | async)?.humidity}}%</span>
-  </p>
-  <p>Last Measurement:
-    <span>{{(lastMeasurement$ | async)?.temperature}}°C  {{(lastMeasurement$ | async)?.humidity}}%</span>
-  </p>
+  <div class="average-current-wrapper">
+    <p class="mat-h2 mat-title">Day Average:
+      <span class="mat-h2 mat-title">{{(averageMeasurement$ | async)?.temperature}}°C {{(averageMeasurement$ | async)?.humidity}}%</span>
+    </p>
+    <p class="mat-h2 mat-title">Last Measurement:
+      <span class="mat-h2 mat-title">{{(lastMeasurement$ | async)?.temperature}}°C  {{(lastMeasurement$ | async)?.humidity}}%</span>
+    </p>
+  </div>
 </div>
 <div class="table__body">
-  <table mat-table [dataSource]="measurements$ | async">
+  <table mat-table [dataSource]="measurements$ | async" matSort>
     <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef> Date</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
       <td mat-cell *matCellDef="let measurement"> {{measurement.measurementTime | date: 'd/MM/yy, H:mm'}}</td>
     </ng-container>
     <ng-container matColumnDef="temperature">
-      <th mat-header-cell *matHeaderCellDef> Temperature</th>
+      <th mat-header-cell *matHeaderCellDef> mat-sort-headerTemperature, °C</th>
       <td mat-cell *matCellDef="let measurement"> {{measurement.temperature}}</td>
     </ng-container>
     <ng-container matColumnDef="humidity">
-      <th mat-header-cell *matHeaderCellDef> Humidity</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Humidity, %</th>
       <td mat-cell *matCellDef="let measurement"> {{measurement.humidity}}</td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
