--- a/front/src/assets/components/app.component.scss
+++ b/front/src/assets/components/app.component.scss
@@ -5,11 +5,17 @@
   height: 100%;
   &__header {
     flex-grow: 0;
-    height: 40px;
+    min-height: 50px;
+    height: 50px;
+    padding: 5px 40px 5px 40px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
     //background-color: blue;
   }
   &__body {
     flex-grow: 1;
     //background-color: darkseagreen;
+    padding: 40px 40px 20px;
   }
 }
