--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="application__header _head-color mat-elevation-z6">
   <p class="mat-display-1">WEATHER OBSERVER</p>
-  <p class="mat-h1 mat-headline">Current Version: <i>{{currentVersion | async}}</i></p>
+  <p class="mat-h1 mat-headline">Current Version: {{currentVersion | async}}</p>
 </div>
 <div class="application__body mat-app-background">
   <router-outlet></router-outlet>
