--- a/front/src/app/components/weather-view/table-view/table-view.component.html
+++ b/front/src/app/components/weather-view/table-view/table-view.component.html
@@ -16,18 +16,18 @@
   </div>
 </div>
 <div class="table__body">
-  <table mat-table [dataSource]="measurements$ | async" matSort>
+  <table mat-table [dataSource]="measurements$ | async">
     <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
-      <td mat-cell *matCellDef="let measurement"> {{measurement.measurementTime | date: 'd/MM/yy, H:mm'}}</td>
+      <th mat-header-cell *matHeaderCellDef>Date</th>
+      <td mat-cell *matCellDef="let measurement">{{measurement.measurementTime | date: 'd/MM/yy, H:mm'}}</td>
     </ng-container>
     <ng-container matColumnDef="temperature">
-      <th mat-header-cell *matHeaderCellDef> mat-sort-headerTemperature, °C</th>
-      <td mat-cell *matCellDef="let measurement"> {{measurement.temperature}}</td>
+      <th mat-header-cell *matHeaderCellDef>Temperature, °C</th>
+      <td mat-cell *matCellDef="let measurement">{{measurement.temperature}}</td>
     </ng-container>
     <ng-container matColumnDef="humidity">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Humidity, %</th>
-      <td mat-cell *matCellDef="let measurement"> {{measurement.humidity}}</td>
+      <th mat-header-cell *matHeaderCellDef>Humidity, %</th>
+      <td mat-cell *matCellDef="let measurement">{{measurement.humidity}}</td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
