Refactor to canvasJS

--- a/front/src/app/components/weather-view/weather-view.component.html
+++ b/front/src/app/components/weather-view/weather-view.component.html
@@ -6,7 +6,7 @@
   </mat-tab>
   <mat-tab label="Graphs">
     <ng-template matTabContent>
-      <app-graph-view></app-graph-view>
+      <app-graph-alternative></app-graph-alternative>
     </ng-template>
   </mat-tab>
 </mat-tab-group>
