--- a/front/src/app/components/weather-view/graph-view/graph-view.component.html
+++ b/front/src/app/components/weather-view/graph-view/graph-view.component.html
@@ -8,20 +8,18 @@
       </mat-select>
     </mat-form-field>
     <div class="average-current-wrapper">
-    <p class="mat-h2 mat-title">Day Average:
-      <span class="mat-h2 mat-title">{{(averageMeasurement$ | async)?.temperature}}°C {{(averageMeasurement$ | async)?.humidity}}%</span>
-    </p>
-    <p class="mat-h2 mat-title">Last Measurement:
-      <span class="mat-h2 mat-title">{{(lastMeasurement$ | async)?.temperature}}°C  {{(lastMeasurement$ | async)?.humidity}}%</span>
-    </p>
+      <p class="mat-h2 mat-title">Day Average:
+        <span class="mat-h2 mat-title">{{(averageMeasurement$ | async)?.temperature}}°C {{(averageMeasurement$ | async)?.humidity}}%</span>
+      </p>
+      <p class="mat-h2 mat-title">Last Measurement:
+        <span class="mat-h2 mat-title">{{(lastMeasurement$ | async)?.temperature}}°C  {{(lastMeasurement$ | async)?.humidity}}%</span>
+      </p>
     </div>
   </div>
-  <div class="graphs__body mat-app-background">
-    <div class="graph-wrapper temperature-graph">
-      <div id="chart-temperature-div" style="width: 100%; height: 500px"></div>
-    </div>
-    <div class="graph-wrapper humidity-graph">
-      <div id="chart-humidity-div" style="width: 100%; height: 500px"></div>
-    </div>
+  <div>
+    <canvas id="temperature">{{ this.temperatureChart }}</canvas>
+  </div>
+  <div>
+    <canvas id="humidity">{{ this.humidityChart }}</canvas>
   </div>
 </div>
